--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=financecontrol
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/finance_db
+spring.datasource.username=db_user
+spring.datasource.password=password
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+spring.flyway.enabled=true
+
+
