📝 Chore: add swagger documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.flyway.enabled=true
 
 api.security.token.secret=${JWT_SECRET:secretkey}
 
+springdoc.api-docs.path=/api/api-docs
+springdoc.swagger-ui.path=/swagger/index.html
+
